--- a/senti/templates/options.html
+++ b/senti/templates/options.html
@@ -35,3 +35,17 @@
     <button style="width:65px;" class="btn btn-lg afraid" data-val=3>4</button>
     <button style="width:65px;" class="btn btn-lg surprised" data-val=4>5</button>
 </div>
+<div id="senti_opts4" class="lightbox">
+    <h3 style="text-align:center">
+        <div id="output4"></div>
+    </h3>
+    <hr>
+    <button style="width:120px;" class="btn btn-lg" data-val=0>發話者</button>
+    <button style="width:120px;" class="btn btn-lg" data-val=1>言語事件</button>
+    <button style="width:120px;" class="btn btn-lg" data-val=2>立場詞</button>
+    <button style="width:120px;" class="btn btn-lg" data-val=3>目標詞</button>
+    <button style="width:120px;" class="btn btn-lg" data-val=4>明顯主觀</button>
+    <button style="width:120px;" class="btn btn-lg" data-val=5>不明顯主觀</button>
+    <button style="width:120px;" class="btn btn-lg" data-val=6>元話語</button>
+    <button style="width:120px;" class="btn btn-lg" data-val=7>論辯中心</button>
+</div>
